--- a/src/routes/main/ProgressOverview/ProgressOverviewItem/ProgressOverviewItem.scss
+++ b/src/routes/main/ProgressOverview/ProgressOverviewItem/ProgressOverviewItem.scss
@@ -45,6 +45,7 @@
   &__date {
     font-weight: bold;
     padding-left: 0.6rem;
+    white-space: nowrap;
   }
 
   &__bar {
